# hmk-tool

./: Cargo.toml  LICENSE  README.md  azdar  elben  gargun_arak  longbow.toml  nolora
beastiary/: beggar.toml  courtier.toml  donar.toml  farmer.toml  fisher.toml  herder.toml  hunter.toml  knight.toml  labourer.toml  lia_kavair.toml  man_at_arms.toml  melona.toml  mercantyler.toml  mercenary.toml  physician.toml  scholar.toml  trivis.toml  weaponcrafter.toml  yeoman.toml
beastiary/body/: aklash.yml  animal_a.yml  animal_b.yml  animal_c.yml  animal_d.yml  animal_e.yml  animal_f.yml  animal_g.yml  animal_h.yml  animal_i.yml  animal_j.yml  animal_k.yml  animal_l.yml  (+19 more)
items/: ball_and_chain.toml  bastard_sword.toml  battleaxe.toml  battlesword.toml  broadsword.toml  buckler.toml  cloth_breeches.toml  cloth_cap.toml  cloth_cloak.toml  cloth_coat.toml  cloth_cowl.toml  cloth_gauntlets.toml  cloth_leggings.toml  cloth_mantle.toml  cloth_robe.toml  cloth_shirt.toml  cloth_surcoat.toml  cloth_swaddle.toml  cloth_trousers.toml  cloth_tunic.toml  cloth_tunic_sleeved.toml  cloth_vest.toml  club.toml  composite_bow_100.toml  composite_bow_120.toml  composite_bow_140.toml  composite_bow_40.toml  composite_bow_60.toml  composite_bow_80.toml  composite_crossbow_200.toml  composite_crossbow_300.toml  dagger.toml  estoc.toml  falcastra.toml  falchion.toml  gambeson_coat.toml  gambeson_long_vest.toml  gambeson_shirt.toml  gambeson_tunic.toml  gambeson_tunic_sleeved.toml  (+116 more)
src/: armor.rs  armory.rs  beastiary.rs  being.rs  core.rs  date.rs  item.rs  main.rs  occupation.rs  weapons.rs
(+163 files in other folders)
