[package]
name = "hmk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
anyhow_serde = "1.0.101"
clap = { version = "4.6.0", features = ["derive"] }
inquire = "0.9.4"
itertools = "0.14.0"
json5 = "1.3.1"
rand = "0.10.0"
rmp = "0.8.15"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.0.7"
yaml_serde = "0.10.4"
